--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.8.1
 Django==5.1.4
+django-environ==0.11.2
 djangorestframework==3.15.2
+gunicorn==23.0.0
 numpy==2.2.0
+packaging==24.2
 pydicom==3.0.1
 pyjpegls==1.5.1
 pylibjpeg==2.0.1
 pylibjpeg-libjpeg==2.3.0
 pylibjpeg-openjpeg==2.4.0
 pylibjpeg-rle==2.0.0
+python-dotenv==1.0.1
 sqlparse==0.5.3
