--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-djangorestframework = "*"
-pydicom = "*"
-pylibjpeg = {extras = ["all"], version = "*"}
-pyjpegls = "*"
-python-dotenv = "*"
-gunicorn = "*"
-django-environ = "*"
-typing-extensions = "*"
+djangorestframework = "==3.15.2"
+pydicom = "==3.0.1"
+pylibjpeg = "==2.0.1"
+pyjpegls = "==1.5.1"
+python-dotenv = "==1.0.1"
+gunicorn = "==23.0.0"
+django-environ = "==0.11.2"
+typing-extensions = "==4.12.2"
+asgiref = "==3.8.1"
+django = "==5.1.4"
+numpy = "==2.2.0"
+packaging = "==24.2"
+pylibjpeg-libjpeg = "==2.3.0"
+pylibjpeg-openjpeg = "==2.4.0"
+pylibjpeg-rle = "==2.0.0"
+sqlparse = "==0.5.3"
 
 [dev-packages]
 
