--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,3 +14,5 @@ pylibjpeg-rle==2.0.0
 python-dotenv==1.0.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
+openslide-python = "*"
+openslide-bin = "*"
