--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pylibjpeg-rle = "==2.0.0"
 sqlparse = "==0.5.3"
 openslide-python = "*"
 openslide-bin = "*"
+wsidicomizer = {extras = ["isyntax"], version = "*"}
 
 [dev-packages]
 
