--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ gunicorn = "==23.0.0"
 django-environ = "==0.11.2"
 typing-extensions = "==4.12.2"
 asgiref = "==3.8.1"
-django = "==5.1.4"
+django = "*"
 numpy = "==2.2.0"
 packaging = "==24.2"
 pylibjpeg-libjpeg = "==2.3.0"
